[gd_scene load_steps=21 format=3 uid="uid://csj61vn7g8omv"]

[ext_resource type="Script" uid="uid://cpd8ay1j4t5co" path="res://scripts/agua.gd" id="1_wrhic"]
[ext_resource type="Texture2D" uid="uid://3vraw3hb5om8" path="res://assets/sprites/agua.png" id="2_astc6"]
[ext_resource type="AudioStream" uid="uid://dc83gobgugo7y" path="res://assets/sfx/tres/sfx_spawn.tres" id="3_gx42f"]
[ext_resource type="AudioStream" uid="uid://bu3yh5p3g5wxp" path="res://assets/sfx/agua_splash-001.ogg" id="10_l44hc"]
[ext_resource type="AudioStream" uid="uid://yesdafk6l0gn" path="res://assets/sfx/agua_splash-002.ogg" id="11_hcayc"]
[ext_resource type="AudioStream" uid="uid://iud0u5gpkwvt" path="res://assets/sfx/agua_splash-003.ogg" id="12_abvli"]
[ext_resource type="AudioStream" uid="uid://cl7mij8cwtvmr" path="res://assets/sfx/agua_splash-004.ogg" id="13_dow3y"]
[ext_resource type="AudioStream" uid="uid://bhxe2ds70dqb7" path="res://assets/sfx/agua_splash-005.ogg" id="14_psaqw"]
[ext_resource type="AudioStream" uid="uid://e4edxf812qlh" path="res://assets/sfx/agua_splash-006.ogg" id="15_gk863"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wrhic"]
size = Vector2(1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbyad"]
atlas = ExtResource("2_astc6")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_wew8i"]
atlas = ExtResource("2_astc6")
region = Rect2(12, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_82536"]
atlas = ExtResource("2_astc6")
region = Rect2(24, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jbcv"]
atlas = ExtResource("2_astc6")
region = Rect2(36, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx42f"]
atlas = ExtResource("2_astc6")
region = Rect2(48, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_13r74"]
atlas = ExtResource("2_astc6")
region = Rect2(60, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_m30wf"]
atlas = ExtResource("2_astc6")
region = Rect2(72, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrhic"]
atlas = ExtResource("2_astc6")
region = Rect2(84, 0, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_3i8gb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbyad")
}],
"loop": true,
"name": &"agua_1",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wew8i")
}],
"loop": true,
"name": &"agua_2",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_82536")
}],
"loop": true,
"name": &"agua_3",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jbcv")
}],
"loop": true,
"name": &"agua_4",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx42f")
}],
"loop": true,
"name": &"agua_5",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_13r74")
}],
"loop": true,
"name": &"agua_6",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m30wf")
}],
"loop": true,
"name": &"agua_7",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrhic")
}],
"loop": true,
"name": &"agua_splash",
"speed": 0.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_45plh"]
random_pitch = 1.1
streams_count = 6
stream_0/stream = ExtResource("10_l44hc")
stream_1/stream = ExtResource("11_hcayc")
stream_2/stream = ExtResource("12_abvli")
stream_3/stream = ExtResource("13_dow3y")
stream_4/stream = ExtResource("14_psaqw")
stream_5/stream = ExtResource("15_gk863")

[node name="agua" type="RigidBody2D"]
top_level = true
z_index = 4
z_as_relative = false
collision_layer = 8
collision_mask = 8
mass = 0.1
gravity_scale = 0.8
linear_damp = 5.0
angular_damp = 5.0
script = ExtResource("1_wrhic")

[node name="collsh_agua" type="CollisionShape2D" parent="."]
z_index = 10
shape = SubResource("RectangleShape2D_wrhic")

[node name="agua_anim" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.643137)
scale = Vector2(1.08, 1.08)
sprite_frames = SubResource("SpriteFrames_3i8gb")
animation = &"agua_1"
offset = Vector2(0.5, 0.5)

[node name="sfx_spawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gx42f")
max_distance = 50.0
bus = &"SFX"

[node name="sfx_splash" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_45plh")
max_distance = 50.0

[node name="sfx_spawn2" type="AudioStreamPlayer2D" parent="."]

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
